refactor config directory