@@ -40,3 +40,35 @@ kylin.hive.beeline.params=-n root -u 'jdbc:hive2://localhost:10000'
 
 ### kylin.env
 The usage of the KAP instance is specified by this property. Optional values include *DEV*, *PROD* and *QA*, among them *PROD* is the default one. In *DEV* mode some developer functions are enabled. 
+
+
+
+## JVM Configuration Setting
+
+In `$KYLIN_HOME/conf/setenv.sh` (for version lower than 2.4, `$KYLIN_HOME/bin/setenv.sh`), two sample settings for `KYLIN_JVM_SETTINGS` environment variable are given. The default setting use relatively less memory. You can comment it and then uncomment the next line to allocate more memory for KAP. The default configuration is: 
+
+```
+export KYLIN_JVM_SETTINGS="-Xms1024M -Xmx4096M -Xss1024K -XX:MaxPermSize=128M -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:$KYLIN_HOME/logs/kylin.gc.$$ -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=64M"
+# export KYLIN_JVM_SETTINGS="-Xms16g -Xmx16g -XX:MaxPermSize=512m -XX:NewSize=3g -XX:MaxNewSize=3g -XX:SurvivorRatio=4 -XX:+CMSClassUnloadingEnabled -XX:+CMSParallelRemarkEnabled -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:CMSInitiatingOccupancyFraction=70 -XX:+DisableExplicitGC -XX:+HeapDumpOnOutOfMemoryError"
+```
+
+
+
+## Enable Email Notification
+
+KAP can send email notification on job complete/fail. To enable this, edit `conf/kylin.properties`, set the following parameters: 
+
+```
+mail.enabled=true
+mail.host=your-smtp-server
+mail.username=your-smtp-account
+mail.password=your-smtp-pwd
+mail.sender=your-sender-address
+kylin.job.admin.dls=adminstrator-address
+```
+
+Restart KAP server to take effective. 
+
+To disable, set `mail.enabled` back to `false`.
+
+Administrator will get notifications for all jobs. Modeler and Analyst need entering email address into the “Notification List” at the first page of Cube wizard, and then will get notifications for that Cube.
